templates/kustomize/wingman-api/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wingman-api
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: wingman-api
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
