templates/kustomize/wingman-api/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wingman-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.dev.cluckn-bell.com
spec:
  tls:
  - hosts:
    - api.dev.cluckn-bell.com
    secretName: wingman-api-dev-tls
  rules:
  - host: api.dev.cluckn-bell.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wingman-api
            port:
              number: 80
